# RunUpdates

./: .gitignore  ARCHITECTURE.md  BUILDING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE_BINARY.txt  Makefile  README.md  Roadmap.md  RunUpdates.code-workspace  SECURITY.md  build.toml  dashboard.js  index.html  metadata.json  pyproject.toml  pytest.ini  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report..yml  documentation_update.yml  feature_request.yml  pull_request_template.md
.github/workflows/: build.yml  nightly.yml
PythonTools/: net_tools.py
PythonTools/sessions/: local_sessions.py  ssh_sessions.py
RunUpdates/: __main__.py  main.py
RunUpdates/ansible/: config_loader.py  loader.py  vault_loader.py
RunUpdates/core/: constants.py
RunUpdates/etc/: hosts.yml
RunUpdates/log_helpers/: constants.py
RunUpdates/logging/: __init__.py  constants.py  factory.py  handlers.py  log_helpers.py  logger.py
RunUpdates/man/: runupdates-config.5.md  runupdates-inventory.1.md  runupdates-inventory.5.md  runupdates-summary.1.md  runupdates-update.1.md  runupdates.1.md
RunUpdates/operations/: connector.py  executor.py  (+3 more)
artifacts/: metadata.json
dashboard/: index.html
docs/: Design.md  Directory_Structure.md  Error_Classification.md  Execution_Flow.md  Inventory.md  Logging.md  Operation.md  PythonTools.md  QuickStart.md  Schema_Reference.md  Troubleshooting.md
packaging/: Packaging.md  README.md  build_all.sh  build_deb.sh  build_rpm.sh  build_tgz_zip.sh
scripts/: build.py  install.sh  update_modified.py
tests/: conftest.py
(+31 files in other folders)
