[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RunUpdates"
version = "0.1.0"
description = "Multi-distro update orchestrator with SSH, inventory, and vault integration."
authors = [
    { name = "Leon McClatchey", email = "leon@linktech.engineering" }
]
requires-python = ">=3.12"
readme = "README.md"

# No dependencies yet — you will add them as needed
dependencies = []

[project.scripts]
# Optional: if you want a CLI entry point
runupdates = "RunUpdates.__main__:main"

[tool.setuptools.packages.find]
include = ["RunUpdates*"]
exclude = ["data*", "Logs*", "archive*"]
